{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "244855ec-a962-6a2c-dbe9-82f835bf97b1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-01-30T08:56:23.545-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coastal-mesh-443616-m2/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/global/networks/default",
            "priority": 1000,
            "project": "coastal-mesh-443616-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/global/firewalls/allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-30T08:56:24.299-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coastal-mesh-443616-m2/global/firewalls/allow-ingress",
            "log_config": [],
            "name": "allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/global/networks/default",
            "priority": 1000,
            "project": "coastal-mesh-443616-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/global/firewalls/allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ingress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "deepseek-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2410-oracular-amd64-v20250123",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/zones/us-central1-a/disks/deepseek-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/coastal-mesh-443616-m2/zones/us-central1-a/instances/deepseek-instance",
            "instance_id": "5782370862337756248",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "nikhil:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDfa9HW1DtSZUQxa0s2ediUDpg1NpSiqYAYgMMjtut6sD9Ha3/L4hAjHJmHGAb7ZVx0JxKp8DWV9GwzID+KGOWNWEFZFQ9K48wtao96sn7eOAxjgHAe6IfBXBKr8TgMmlqwBSHLVUXyYzbfBcSr73+/IkExpNXGx6+CdFbNOGtj9DwjthYJXci7BWtZauILWyUAvThCIiNfZRsU5MyEMhu/XqGk93XOxfyzI8BS5QpRGOgglG0Ieg4bpdzG2fDl7vwuQ7OWTQf615U9mwggPdWQpy0q/rX9Wm/jmuGlqTubE2xykpuVoj4ZZ8Wzjf8hi3To9CCX7ytnpjWgGuh9246mQmxbxjstYMW7DcW8DQwVTF0fuZnxRhUYVIUYCb2N/yO5eclwfhyS4ozHfdgzNXKD1vZs8KaoNz11RWaqmvBA0f [...]
            },
            "metadata_fingerprint": "ojUdcE3FoiY=",
            "name": "deepseek-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.188.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/global/networks/default",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/regions/us-central1/subnetworks/default",
                "subnetwork_project": "coastal-mesh-443616-m2"
              }
            ],
            "project": "coastal-mesh-443616-m2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coastal-mesh-443616-m2/zones/us-central1-a/instances/deepseek-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-egress",
              "allow-ingress"
            ],
            "tags_fingerprint": "hrByUCm4UNQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}